# monsterui-sql-editor-duckdb

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
duckdb-sql-editor/: .env.example  README.md  app.py  db.py  index.js  requirements.txt  styles.css
duckdb-sql-editor-refactored/: README.md  __init__.py  app.py  requirements.txt
duckdb-sql-editor-refactored/components/: __init__.py  ui.py
duckdb-sql-editor-refactored/static/css/: app.css
duckdb-sql-editor-refactored/static/js/: app.js
duckdb-sql-editor-refactored/utils/: __init__.py  db.py  helpers.py
